Revision history for ElasticSearch
0.37    2011-05-01

        BREAKING CHANGES:
         -  ElasticSearch::ScrolledSearch

            $scrolled_search->next() now returns 1 result by default, instead
            of $size results, to make it easier to write:

                while (my $result = $scroll->next) {}

         - ElasticSearch::TestServer is now an object which subclasses
           ElasticSearch itself.  connect_to_server() has been removed.
           Also, the port parameter can be used to specify a custom start port
           when starting the test server, making it easier to run the
           test server while there is an existing ES server running.

0.36    2011-04-24
        Updated ElasticSearch.pm to work with ElasticSearch version 0.16.0

        New features:
         - no_refresh:
           Disable the automatic discovery of live nodes, to work with
           remote clusters or proxied clusters

         - scrolled_search():
           Convenience iterator to wrap search/scroll requests

         - reindex():
           Utility to reindex data from one index to another, or one
           cluster to another

         - use_index()/use_type():
           Set default index/type parameters

         - searchqs():
           URI/query string search, (as opposed to search() which uses a
           request body)

         - New search_type's : 'scan' and 'count'

         - index_settings():
           Retrieve index settings

0.35    2011-04-07
        Added the 'dynamic_templates' option to put_mapping

0.34    2011-03-20

        Fixed the tests for scrolling - turns out sorting when scrolling works
        correctly. It was my tests which were bad.

0.33    2011-03-19
        Added the ElasticSearch::Transport::HTTPTiny backend

0.32    2011-03-19

         - Added as_json as an arg to all ES requests.
         - Fixed a logic bug when setting the port manually in
           ElasticSearch::TestServer